--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <title>MShuler Portfolio</title>
   </head>
   <body>
+
 <!-- navbar -->
-<nav class="navbar navbar-expand-xl navbar-dark bg-dark" id="xlNavbar">
+<nav class="navbar navbar-expand-xl navbar-dark" id="xlNavbar">
   <a class="navbar-brand" href="#"><img src="./images/MSlogoWhite.png" width="35" height="30" class="d-inline-block align-top"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -31,6 +32,14 @@
     </ul>
   </div>
 </nav>
+
+<!-- Hero Content -->
+<div id="hero">
+  <div class="container-fluid">
+    <h1 class="display-1 text-white text-center">Marit Shuler</h1>
+    <h1 class="display-4 text-white text-center">Website Developer</h1>
+  </div>
+</div>
 
 <!-- Optional JavaScript -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
