--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
       <link rel="stylesheet" type="text/css" href="./style.css">
 
+    <!-- Fontawesome -->
+      <script src="https://kit.fontawesome.com/847a60c918.js" crossorigin="anonymous"></script>
+
       <title>MShuler Portfolio</title>
   </head>
   <body>
@@ -35,11 +38,16 @@
 
 <!-- Hero Content -->
 <div id="hero">
-  <div class="container-fluid">
-    <h1 class="display-1 text-white text-center">Marit Shuler</h1>
-    <h1 class="display-4 text-white text-center">Website Developer</h1>
+  <div class="container-fluid text-center box">
+    <h1 class="display-1 text-white font-weight-light">Marit Shuler</h1>
+    <h1 class="display-4 text-white font-weight-lighter">Website Developer</h1>
+    <div class="buttons row justify-content-center">
+      <button type="button" class="btn btn-light btn-lg mx-3"><a href="http://www.linkedin.com/in/marit-shuler" class="btn-link"</a><i class="fab fa-linkedin"></i>LinkedIn</button>
+      <button type="button" class="btn btn-light btn-lg"><a href="https://github.com/marshuler" class="btn-link"</a><i class="fab fa-github-square"></i>GitHub</button>
+    </div>
   </div>
 </div>
+
 
 <!-- Optional JavaScript -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
