Added portfolio section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">About Me</a>
       </li>
     </ul>
   </div>
@@ -38,15 +38,71 @@
 
 <!-- Hero Content -->
 <div id="hero">
-  <div class="container-fluid text-center box">
+  <div class="container-fluid text-center">
     <h1 class="display-1 text-white font-weight-light">Marit Shuler</h1>
     <h1 class="display-4 text-white font-weight-lighter">Website Developer</h1>
     <div class="buttons row justify-content-center">
-      <button type="button" class="btn btn-light btn-lg mx-3"><a href="http://www.linkedin.com/in/marit-shuler" class="btn-link"</a><i class="fab fa-linkedin"></i>LinkedIn</button>
-      <button type="button" class="btn btn-light btn-lg"><a href="https://github.com/marshuler" class="btn-link"</a><i class="fab fa-github-square"></i>GitHub</button>
+      <button type="button" class="btn btn-light btn-lg mx-3"><a href="http://www.linkedin.com/in/marit-shuler" target="_blank"></a><i class="fab fa-linkedin"></i>LinkedIn</button>
+      <button type="button" class="btn btn-light btn-lg"><a href="https://github.com/marshuler" target="_blank"></a><i class="fab fa-github-square"></i>GitHub</button>
     </div>
   </div>
 </div>
+
+<!-- portfolio section -->
+<div class="container">
+  <div class="heading pt-3 pb-2">
+    <h2>Portfolio</h2>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-xl-6">
+      <div class="portfolio">
+        <div class="image mb-3">
+          <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+        </div>
+      <div class="description">
+        <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+        <h6 class="font-weight-light mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-xl-6">
+    <div class="portfolio">
+      <div class="image mb-3">
+        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+      </div>
+    <div class="description">
+      <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+      <h6 class="font-weight-light mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+    </div>
+  </div>
+</div>
+<div class="col-12 col-xl-6">
+  <div class="portfolio">
+    <div class="image mb-3 mt-4">
+      <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+    </div>
+    <div class="description">
+      <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+      <h6 class="font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+    </div>
+  </div>
+</div>
+<div class="col-12 col-xl-6">
+  <div class="portfolio">
+    <div class="image mb-3 mt-4">
+      <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+    </div>
+    <div class="description">
+      <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+      <h6 class="font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
 
 
 <!-- Optional JavaScript -->
