Added about me section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#portfolio">Portfolio<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About Me</a>
+        <a class="nav-link" href="#about">About Me</a>
       </li>
     </ul>
   </div>
@@ -42,15 +42,16 @@
     <h1 class="display-1 text-white font-weight-light">Marit Shuler</h1>
     <h1 class="display-4 text-white font-weight-lighter">Website Developer</h1>
     <div class="buttons row justify-content-center">
-      <button type="button" class="btn btn-light btn-lg mx-3"><a href="http://www.linkedin.com/in/marit-shuler" target="_blank"></a><i class="fab fa-linkedin"></i>LinkedIn</button>
-      <button type="button" class="btn btn-light btn-lg"><a href="https://github.com/marshuler" target="_blank"></a><i class="fab fa-github-square"></i>GitHub</button>
+      <button type="button" class="btn btn-light btn-lg mx-3"><a href="http://www.linkedin.com/in/marit-shuler" target="_blank"></a><i class="fab fa-linkedin"></i>&nbsp;LinkedIn</button>
+      <button type="button" class="btn btn-light btn-lg"><a href="https://github.com/marshuler" target="_blank"></a><i class="fab fa-github-square"></i>&nbsp;GitHub</button>
     </div>
   </div>
 </div>
 
 <!-- portfolio section -->
-<div class="container">
-  <div class="heading pt-3 pb-2">
+<div  id="portfolio">
+  <div class="container">
+    <div class="heading pt-4 pb-4">
     <h2>Portfolio</h2>
   </div>
 </div>
@@ -61,47 +62,76 @@
         <div class="image mb-3">
           <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
         </div>
-      <div class="description">
-        <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
-        <h6 class="font-weight-light mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+        <div class="description">
+          <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+          <h6 class="font-weight-light mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-xl-6">
+      <div class="portfolio">
+        <div class="image mb-3">
+          <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+        </div>
+        <div class="description">
+          <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+          <h6 class="font-weight-light mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-xl-6">
+      <div class="portfolio">
+        <div class="image mb-3 mt-4">
+          <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+        </div>
+        <div class="description mb-5">
+          <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+          <h6 class="font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-xl-6">
+      <div class="portfolio">
+        <div class="image mb-3 mt-4">
+          <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+        </div>
+        <div class="description mb-5">
+          <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
+          <h6 class="font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col-12 col-xl-6">
-    <div class="portfolio">
-      <div class="image mb-3">
-        <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
+</div>
+</div>
+
+<!-- about me section -->
+<div  id="about">
+  <div class="container">
+    <div class="heading pt-4 pb-4 text-light">
+      <h2>About Me</h2>
+    </div>
+  </div>
+  <div class="container ">
+    <div class="row no-gutters align-items-center">
+      <div class="col-12 col-md-3">
+        <div class="image">
+          <img class="img-fluid w-75 rounded-circle" src="./images/P6070942.JPG"/>
+        </div>
       </div>
-    <div class="description">
-      <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
-      <h6 class="font-weight-light mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
+          <div class="col-12 col-md-9">
+            <h6 class="text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in nisl pretium ligula dictum facilisis. Mauris pharetra, ipsum vitae laoreet dictum, lacus magna maximus orci, at pulvinar lacus diam non tortor. Sed sodales finibus orci, id placerat tortor fermentum sit amet. Quisque quam orci, porta eu tempus in, eleifend quis lacus. Morbi ut tortor quis mauris tristique varius. Nunc tempus, augue eu congue vestibulum, enim ipsum lacinia justo, sed feugiat purus ipsum sed lacus. Nam tristique dictum venenatis. Pellentesque mattis nisi eu semper fringilla. Nam ac erat at nunc dapibus egestas. Mauris placerat vitae neque quis iaculis.</h6>
+          </div>
+        </div>
+      </div>
+      <hr/>
+      <div class="container">
+        <div class="heading pt-4 pb-4 text-light">
+          <p>&copy; &nbsp;<img src="./images/MSlogoWhite.png" width="20" height="18" class="d-inline-block align-top"/>&nbsp;2020. All rights reserved.</p>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-<div class="col-12 col-xl-6">
-  <div class="portfolio">
-    <div class="image mb-3 mt-4">
-      <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
-    </div>
-    <div class="description">
-      <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
-      <h6 class="font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
-    </div>
-  </div>
-</div>
-<div class="col-12 col-xl-6">
-  <div class="portfolio">
-    <div class="image mb-3 mt-4">
-      <a href="https://placeholder.com"><img class="img-fluid" src="https://via.placeholder.com/500x350.png? text=Website Placeholder"></a>
-    </div>
-    <div class="description">
-      <h4 class="font-weight-bold">Lorem ipsum dolor sit amet.</h4>
-      <h6 class="font-weight-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis bibendum nisi. Fusce suscipit volutpat orci sed ultrices.</h6>
-    </div>
-  </div>
-</div>
-</div>
-</div>
+
 
 
 
